--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "@digitalstage/api-client-js-example",
+  "name": "@digitalstage/web-client",
   "description": "Example usage of API client for javascript",
   "version": "0.1.0",
-  "private": true,
   "author": "Tobias Hegemann <tobias.hegemann@googlemail.com>",
   "license": "GPL-3.0-or-later",
   "scripts": {
@@ -12,12 +11,15 @@
   },
   "dependencies": {
     "baseui": "^9.112.0",
+    "body-scroll-lock": "^3.1.5",
     "debug": "^4.3.1",
     "formik": "^2.2.6",
     "next": "10.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "react-intl": "^5.15.5",
+    "react-portal": "^4.2.1",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
     "styletron-engine-atomic": "^1.4.7",
@@ -25,6 +27,7 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/body-scroll-lock": "^2.6.1",
     "@types/debug": "^4.1.5",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
