--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-scroll-lock": "^3.1.5",
     "debug": "^4.3.1",
     "formik": "^2.2.6",
+    "mediasoup-client": "^3.6.29",
     "next": "10.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
