--- a/package.json
+++ b/package.json
@@ -10,28 +10,28 @@
     "start": "next start"
   },
   "dependencies": {
+    "@digitalstage/api-client-react": "*",
     "body-scroll-lock": "^3.1.5",
     "debug": "^4.3.1",
     "formik": "^2.2.6",
-    "mediasoup-client": "^3.6.29",
-    "next": "10.1.3",
+    "mediasoup-client": "^3.6.30",
+    "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "react-intl": "^5.15.8",
+    "react-intl": "^5.17.4",
     "react-portal": "^4.2.1",
-    "react-redux": "^7.2.3",
-    "redux": "^4.0.5",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/body-scroll-lock": "^2.6.1",
     "@types/debug": "^4.1.5",
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.3",
+    "@types/node": "^15.0.1",
+    "@types/react": "^17.0.4",
     "@types/react-redux": "^7.1.16",
     "@types/styletron-engine-atomic": "^1.1.0",
-    "eslint-plugin-baseui": "^9.112.0",
     "typescript": "^4.2.4"
   }
 }
