--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
+    "lint": "eslint --ext .js,.ts .",
     "build": "next build",
     "start": "next start"
   },
@@ -33,6 +34,11 @@
     "@types/react": "^17.0.4",
     "@types/react-redux": "^7.1.16",
     "@types/styletron-engine-atomic": "^1.1.0",
+    "eslint": "^7.25.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-promise": "^5.1.0",
     "typescript": "^4.2.4"
   }
 }
