--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-scroll-lock": "^3.1.5",
     "debug": "^4.3.1",
     "formik": "^2.2.6",
+    "lodash": "^4.17.21",
     "mediasoup-client": "^3.6.30",
     "next": "10.2.0",
     "react": "17.0.2",
