--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "@digitalstage/api-client-react": "^0.0.13",
+    "@digitalstage/api-client-react": "^0.0.14",
     "body-scroll-lock": "^3.1.5",
     "debug": "^4.3.1",
     "formik": "^2.2.6",
+    "konva": "^7.2.5",
     "lodash": "^4.17.21",
     "mediasoup-client": "^3.6.30",
     "next": "10.2.0",
@@ -23,6 +24,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-intl": "^5.17.5",
+    "react-konva": "^17.0.2-0",
     "react-portal": "^4.2.1",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
