--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react-intl": "^5.17.5",
     "react-konva": "^17.0.2-0",
     "react-portal": "^4.2.1",
+    "react-range": "^1.8.7",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
+    "standardized-audio-context": "^25.2.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
