--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,8 @@
 {
-  "printWidth": 100,
-  "semi": false,
+  "endOfLine": "lf",
+  "semi": true,
   "singleQuote": true,
-  "tabWidth": 4,
+  "tabWidth": 2,
+  "printWidth": 100,
   "trailingComma": "es5"
 }
