--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
   "dependencies": {
     "@digitalstage/api-client-react": "^0.0.18",
     "@digitalstage/api-types": "^0.0.11",
-    "next": "^10.2.0",
+    "body-scroll-lock": "^3.1.5",
+    "formik": "^2.2.7",
+    "next": "^10.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-portal": "^4.2.1",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
-    "sass": "^1.32.13"
+    "sass": "^1.32.13",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.24.0",
