--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "formik": "^2.2.7",
     "next": "^10.2.1",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-portal": "^4.2.1",
