--- a/package.json
+++ b/package.json
@@ -13,19 +13,21 @@
     "start": "next start"
   },
   "dependencies": {
-    "@digitalstage/api-client-react": "^0.0.18",
-    "@digitalstage/api-types": "^0.0.11",
+    "@digitalstage/api-client-react": "^0.1.0",
+    "@digitalstage/api-types": "^0.1.0",
     "body-scroll-lock": "^3.1.5",
     "formik": "^2.2.7",
-    "next": "^10.2.1",
+    "next": "^10.2.2",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-portal": "^4.2.1",
+    "react-range": "^1.8.7",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
-    "sass": "^1.32.13",
+    "sass": "^1.33.0",
+    "standardized-audio-context": "^25.2.2",
     "yup": "^0.32.9"
   },
   "devDependencies": {
