--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "body-scroll-lock": "^3.1.5",
     "debug": "^4.3.1",
     "formik": "^2.2.8",
-    "konva": "7.2.5",
+    "konva": "~7.2.5",
     "mediasoup-client": "^3.6.30",
     "next": "^10.2.3",
     "react": "^17.0.2",
@@ -32,23 +32,23 @@
     "react-resize-detector": "^6.7.2",
     "redux": "^4.1.0",
     "sass": "^1.34.0",
-    "standardized-audio-context": "^25.2.3",
+    "standardized-audio-context": "^25.2.4",
     "teckos-client": "^0.1.5",
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
-    "@typescript-eslint/parser": "^4.25.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
     "eslint": "^7.27.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.3",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.3.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.3.2"
   }
 }
