--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "@digitalstage/api-types": "^0.2.0",
+    "@digitalstage/api-types": "^0.2.5",
+    "@types/fabric": "^4.5.0",
     "body-scroll-lock": "^3.1.5",
     "debug": "^4.3.1",
+    "fabric": "^4.5.0",
     "formik": "^2.2.9",
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^2.2.1",
