--- a/package.json
+++ b/package.json
@@ -7,22 +7,24 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "postinstall": "git submodule update --recursive",
     "dev": "next dev",
     "lint": "eslint --ext .js,.ts .",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "@digitalstage/api-types": "^0.2.5",
+    "@digitalstage/api-types": "^0.2.7",
     "@types/fabric": "^4.5.0",
     "body-scroll-lock": "^3.1.5",
     "debug": "^4.3.1",
+    "detect-browser": "^5.2.0",
     "formik": "^2.2.9",
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^2.2.1",
     "konva": "~8.0.4",
     "mediasoup-client": "^3.6.33",
-    "next": "^11.0.0",
+    "next": "^11.0.1",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
@@ -39,11 +41,11 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.29.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-next": "^11.0.0",
+    "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
