--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-konva": "^17.0.2-5",
     "react-portal": "^4.2.1",
     "react-redux": "^7.2.4",
