Added enter invite code modal

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mediasoup-client": "^3.6.37",
     "next": "^11.1.0",
     "react": "^17.0.2",
+    "react-code-input": "^3.10.1",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
