--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_AUTH_URL=http://localhost:5000
 NEXT_PUBLIC_API_URL=ws://localhost:4000
+NEXT_PUBLIC_LOGFLARE_API_KEY=
+NEXT_PUBLIC_LOGFLARE_SOURCE_TOKEN=
