--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "mediasoup-client": "^3.6.37",
     "nanoid": "^3.1.25",
     "next": "^11.1.0",
+    "pino": "^6.13.1",
+    "pino-logflare": "^0.3.12",
     "react": "^17.0.2",
     "react-code-input": "^3.10.1",
     "react-color": "^2.19.3",
@@ -49,10 +51,11 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@welldone-software/why-did-you-render": "^6.2.1",
     "@babel/core": "^7.15.0",
-    "@types/node": "^16.7.5",
+    "@types/node": "^16.7.6",
+    "@types/pino": "^6.3.11",
     "@types/react": "^17.0.19",
+    "@welldone-software/why-did-you-render": "^6.2.1",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.0",
     "eslint-config-prettier": "^8.3.0",
