--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
     "next-transpile-modules": "^8.0.0",
+    "pino-pretty": "^6.0.0",
     "prettier": "^2.3.2",
     "sass": "^1.38.2",
     "typescript": "^4.4.2",
