--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "redux-devtools-extension": "^2.13.9",
     "standardized-audio-context": "^25.3.7",
     "teckos-client": "^0.2.0",
+    "use-animation-frame": "^0.1.1",
     "webrtc-adapter": "^8.1.0",
     "yup": "^0.32.9"
   },
