--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "konva": "8.1.4",
     "lodash": "^4.17.21",
     "mediasoup-client": "^3.6.41",
-    "nanoid": "^3.1.25",
     "next": "^11.1.2",
     "pino": "^6.13.2",
     "pino-logflare": "^0.3.12",
@@ -49,6 +48,7 @@
     "standardized-audio-context": "^25.3.9",
     "teckos-client": "^0.2.0",
     "use-animation-frame": "^0.1.1",
+    "uuid": "^8.3.2",
     "webrtc-adapter": "^8.1.0",
     "yup": "^0.32.9"
   },
@@ -60,6 +60,7 @@
     "@types/pino": "^6.3.11",
     "@types/react": "^17.0.21",
     "@types/react-portal": "^4.0.3",
+    "@types/uuid": "^8.3.1",
     "@welldone-software/why-did-you-render": "^6.2.1",
     "babel-jest": "^27.2.0",
     "eslint": "^7.32.0",
