Fixed ts strict errors

--- a/package.json
+++ b/package.json
@@ -54,10 +54,12 @@
     "@babel/core": "^7.15.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.1",
+    "@types/body-scroll-lock": "^3.1.0",
     "@types/js-cookie": "^3.0.0",
     "@types/node": "^16.10.2",
     "@types/pino": "^6.3.11",
     "@types/react": "^17.0.25",
+    "@types/react-color": "^3.0.5",
     "@types/react-portal": "^4.0.4",
     "@types/uuid": "^8.3.1",
     "@welldone-software/why-did-you-render": "^6.2.1",
