--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-icons": "^4.3.1",
     "react-portal": "^4.2.1",
     "react-redux": "^7.2.5",
+    "react-tracked": "^1.7.4",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "teckos-client": "^0.2.1",
