--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "teckos-client": "^0.2.1",
     "uuid": "^8.3.2",
     "webrtc-adapter": "^8.1.0",
-    "yup": "^0.32.9"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
@@ -55,9 +55,9 @@
     "@testing-library/react": "^12.1.2",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/js-cookie": "^3.0.0",
-    "@types/node": "^16.10.3",
+    "@types/node": "^16.10.5",
     "@types/pino": "^6.3.11",
-    "@types/react": "^17.0.27",
+    "@types/react": "^17.0.29",
     "@types/react-color": "^3.0.5",
     "@types/react-portal": "^4.0.4",
     "@types/uuid": "^8.3.1",
@@ -66,16 +66,21 @@
     "babel-jest": "^27.2.5",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.1",
     "eslint-config-next": "^11.1.2",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.5",
     "pino-pretty": "^7.0.1",
     "prettier": "^2.4.1",
     "react-test-renderer": "^17.0.2",
     "sass": "^1.42.1",
-    "typescript": "^4.4.3",
+    "typescript": "^4.4.4",
     "ws": "^8.2.3"
   }
 }
