Channels are now arrays

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
-    "@digitalstage/api-types": "^0.6.1",
+    "@digitalstage/api-types": "^0.6.3",
     "@react-hook/debounce": "^4.0.0",
     "@react-hook/throttle": "^2.2.0",
     "@reduxjs/toolkit": "^1.6.2",
@@ -32,7 +32,8 @@
     "lodash": "^4.17.21",
     "mediasoup-client": "^3.6.43",
     "next": "^11.1.2",
-    "pino": "^7.0.1",
+    "next-export-i18n": "^1.0.3",
+    "pino": "^7.0.3",
     "react": "^17.0.2",
     "react-code-input": "^3.10.1",
     "react-color": "^2.19.3",
@@ -53,15 +54,15 @@
     "@testing-library/react": "^12.1.2",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/js-cookie": "^3.0.0",
-    "@types/node": "^16.10.9",
-    "@types/pino": "^6.3.11",
-    "@types/react": "^17.0.29",
+    "@types/node": "^16.11.1",
+    "@types/pino": "^6.3.12",
+    "@types/react": "^17.0.30",
     "@types/react-color": "^3.0.5",
     "@types/react-portal": "^4.0.4",
     "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@welldone-software/why-did-you-render": "^6.2.1",
-    "babel-jest": "^27.2.5",
+    "babel-jest": "^27.3.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^14.0.1",
@@ -73,8 +74,8 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.2.5",
-    "pino-pretty": "^7.0.1",
+    "jest": "^27.3.1",
+    "pino-pretty": "^7.1.0",
     "prettier": "^2.4.1",
     "react-test-renderer": "^17.0.2",
     "sass": "^1.43.2",
