(web-client) Add feature: Apply new ICE negotiation #D2-193

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
       "@digitalstage/api-client-react": [
         "api"
       ]
-    }
+    },
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
