--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-hook/debounce": "^4.0.0",
     "@react-hook/throttle": "^2.2.0",
     "@reduxjs/toolkit": "^1.6.2",
+    "@sentry/nextjs": "^6.13.3",
     "body-scroll-lock": "^4.0.0-beta.0",
     "bowser": "^2.11.0",
     "formik": "^2.2.9",
@@ -48,6 +49,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@sentry/cli": "^1.70.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@types/body-scroll-lock": "^3.1.0",
