--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 # Example configuration
 NEXT_PUBLIC_AUTH_URL=https://auth.dstage.org
 NEXT_PUBLIC_API_URL=wss://api.dstage.org
+NEXT_PUBLIC_JN_DOWNLOAD_URL=https://github.com/digital-stage/digital-stage-pc/releases
