(web-client) feature: updated deps

--- a/.ncurc.json
+++ b/.ncurc.json
@@ -1,6 +1,7 @@
 {
   "upgrade": true,
   "reject": [
+    "next",
     "eslint",
     "@typescript-eslint/eslint-plugin",
     "@typescript-eslint/parser"
