--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,4 @@
 NEXT_PUBLIC_AUTH_URL=https://auth.dstage.org
 NEXT_PUBLIC_API_URL=wss://api.dstage.org
 NEXT_PUBLIC_JN_DOWNLOAD_URL=https://github.com/digital-stage/digital-stage-pc/releases
+NEXT_PUBLIC_LOG_URL=https://log.dstage.org
